--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "config": "^3.3.7",
     "cross-env": "^7.0.3",
     "express": "^4.17.2",
